* Decrease madman's memory usage upon save. (sugg. by Ove Soerensen)
+ Ripper integration. (sugg. by dbeach7 at users.sf.net)
+ Custom tags.
+ Aggregate songs. (sugg. by Pavel Avgustinov)
+ Playlist maintenance on disk. (sugg. by Pavel Avgustinov)
+ Grouping threshold in overview -> don't show group below 3 entries. 
  (sugg. by Michael Bueker)
* Mood and tempo extraction from songs?

0.94 --------------------------------------------------------------------------
+ Make the web server more visible. 
  (document on web site)
* Convey the killer features: Web server, remote control, AutoDJ.

* Play button usability:
  If XMMS is not running or the playlist is empty, nothing happens in response to 
  the play button.

* Add AutoDJ presets versioning.

* Fixed GNOME 2 docking.
* Bo Flower Track Number order.
* Revived l10n.
* Track order for playing albums. (from overview and play like songs)

* Be able to parse relative M3U files. (sugg. by Jon Burgess)
+ M3U export wizard. (Consider: relative paths, "/" path delimiter,
  DOS line endings.) (Jon Burgess)
+ Added an XDG compliant desktop file. (Fix for icon) (Jaako H Kyro)
+ Show all songs in current file's folder. (Xavier ?)
+ Filter on this field/add AND/add OR. (Adam Ward)

* ~pathname, ~filename_without_path
* Mousewheel on tray icon allows forward/back.

* Extended characters in filenames?
  Passing of ext. character filenames to plugins? (?? instead of char)
* Problems with doubly drawn list content
* Fixed BadMatch X errors.
* Highlight current song leaves another marked song also selected.
* Fix annoyance with clicking artist link twice.
* Continuous AutoDJ from any source.
  (sugg. by Johan Forsberg)
* Show count after letter in overview.
* Avoid automatic window resize on very long song titles.
  (sugg. by Johan Forsberg)
* Save database after web server is done. (sugg. by Brian Lopes)
* See why AutoDJ was wrong with multiple selections from the same score set.
* Locking. (sugg. by Christian Hammers)