@@ -151,7 +151,7 @@ with plenty of help from:
 &lt;ul&gt;
 &lt;li&gt; Shawn Willden (Auto DJ rewrite)
 &lt;li&gt; Guido Schlabitz (bunch'o'patches :-)
-&lt;li&gt; Walter King (M4A support)
+&lt;li&gt; Walter King (M4A support, tagless songs, various patches)
 &lt;li&gt; Christian Plagemann (new artwork)
 &lt;li&gt; Felipe Rivera (new icons)
 &lt;li&gt; Jon Burgess (bug fixes, suggestions)
